[gd_scene load_steps=5 format=3 uid="uid://bib25ue02ivoa"]

[ext_resource type="Script" uid="uid://d18fyiu57x5qp" path="res://cats/cat/cat.gd" id="1_5ic4v"]
[ext_resource type="Texture2D" uid="uid://cobsy8mfy4h8p" path="res://cats/cat/cat.png" id="2_wycbe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lekbb"]
radius = 188.13

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ciqqq"]
size = Vector2(16.75, 15.25)

[node name="Cat" type="StaticBody2D"]
script = ExtResource("1_5ic4v")

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(10, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-10, 0)
shape = SubResource("CircleShape2D_lekbb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_ciqqq")

[node name="Aim" type="Marker2D" parent="."]

[node name="Cat01" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_wycbe")

[node name="BulletContainer" type="Node" parent="."]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_gato_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_gato_body_exited"]
